# sprinter

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CICD_QUICK_START.md  CI_CD_SETUP.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SECURITY_AUDIT.md  TESTING.md  export_static.py  generate_json.py  migrate_to_supabase.py  pyproject.toml  pytest.ini  railway.toml  render.yaml  requirements-dev.txt  requirements.txt  setup-cicd.sh  supabase_schema.sql  sync.py
.claude/: settings.json
.github/workflows/: ci.yml  deploy-pages.yml
.streamlit/: config.toml  secrets.toml.example
api/: index.py
docs/: index.html
docs/data/: dashboard_data.json
migrations/: 001_add_sprint_snapshots.py
public/: index.html
public/data/: dashboard.json
src/: analyzer.py  app.py  app.py.backup  auth.py  database.py  jira_client.py
tests/: __init__.py  test_database.py
